# vive-diy-position-sensor

./: .gitignore  .gitmodules  .travis.yml  1-click-bom.tsv  CMakeLists.txt  LICENSE.txt  RingBuffer.cpp  RingBuffer.h  cmake-variants.json  data_decoder.cpp  geometry.cpp  input_cmp.cpp  main.cpp  main.h  mavlink.cpp  notes.md  readme.md  ring_buffer.cc  ring_buffer.h  ring_buffer_test.cc  settings.cpp  settings.h  setup.cpp  skyview_lighthouse.cc  skyview_lighthouse.h  skyview_lighthouse_test.cc  teensy-arm.toolchain.cmake  ublox.cpp  util.cpp  utils.h
IR Sensor Mount/: IR Sensor Mount v1.stl  IR Sensor Mount v2.stl
docs/: diy-sensor.md  how-lighthouse-works.md  manual.md
include/: cycle_phase_classifier.h  data_frame_decoder.h  debug_node.h  formatters.h  geometry.h  input.h  messages.h  outputs.h  print_helpers.h  pulse_processor.h  settings.h  vive_sensors_pipeline.h
include/primitives/: producer_consumer.h  static_registration.h  string_utils.h  timestamp.h  workers.h
libs/ADC/: ADC.cpp  ADC.h  ADC_Module.cpp  ADC_Module.h  RingBuffer.h  RingBufferDMA.cpp  RingBufferDMA.h  keywords.txt
libs/ADC/examples/adc_pdb/: adc_pdb.ino
libs/ADC/examples/analogContinuousDifferentialRead/: analogContinuousDifferentialRead.ino
libs/ADC/examples/analogContinuousRead/: analogContinuousRead.ino
libs/ADC/examples/analogDifferentialRead/: analogDifferentialRead.ino  analogDifferentialRead.ino.save-failed
libs/ADC/examples/analogRead/: analogRead.ino
libs/ADC/examples/analogReadIntervalTimer/: analogReadIntervalTimer.ino
libs/ADC/examples/ringBuffer/: ringBuffer.ino
libs/ADC/examples/ringBufferDMA/: ringBufferDMA.ino
libs/ADC/examples/synchronizedMeasurements/: synchronizedMeasurements.ino
libs/teensy3/: AudioStream.cpp  AudioStream.h  DMAChannel.cpp  HardwareSerial.h  IPAddress.cpp  IPAddress.h  IntervalTimer.h  Makefile  Print.cpp  Udp.h  WCharacter.h  WProgram.h  analog.c  arm_common_tables.h  avr_emulation.h  core_pins.h  eeprom.c  keylayouts.c  keylayouts.h  kinetis.h  memcpy-armv7m.S  memset.S  mk20dx128.c  mk20dx128.ld  mk20dx256.ld  mk64fx512.ld  mk66fx1m0.ld  mkl26z64.ld  nonstd.c  pins_arduino.h  pins_teensy.c  serial1.c  serial1_doughboy.txt  serial2.c  serial3.c  touch.c  usb_audio.cpp  usb_audio.h  usb_desc.c  usb_desc.h  (+12 more)
libs/teensy3/avr/: eeprom.h  pgmspace.h  power.h  sleep.h  wdt.h
libs/teensy3/util/: crc16.h  delay.h  parity.h
platform-particle/: CMakeLists.txt  build.mk  input_tim.cpp  input_tim.h  main.cpp  notes.md  output_serial.cpp  output_serial.h  output_wifi.cpp  output_wifi.h  platform.cpp  stm32f2xx.toolchain.cmake
platform-teensy/: CMakeLists.txt  input_cmp.cpp  input_cmp.h  input_ftm.cpp  input_ftm.h  main.cpp  output_serial.cpp  platform.cpp  teensy-arm.toolchain.cmake  teensy-targets.cmake  timestamp.cpp
ros/vive_tracker/: CMakeLists.txt  package.xml
ros/vive_tracker/launch/: node.launch
ros/vive_tracker/src/: vive_tracker.py
ros/vive_tracker_node/launch/: node.launch
ros/vive_tracker_node/src/: vive_tracker.py
src/: CMakeLists.txt  common.h  cycle_phase_classifier.cpp  cycle_phase_classifier.h  data_frame_decoder.cpp  data_frame_decoder.h  debug_node.cpp  debug_node.h  formatters.cpp  formatters.h  geometry.cpp  geometry.h  input.cpp  input.h  input_cmp.cpp  input_cmp.h  led_state.cpp  led_state.h  main.cpp  mavlink.cpp  message_logging.h  outputs.cpp  outputs.h  platform.cpp  platform.h  print_helpers.h  pulse_processor.cpp  pulse_processor.h  settings.cpp  settings.h  setup.cpp  ublox.cpp  vive_sensors_pipeline.cpp  vive_sensors_pipeline.h
src/primitives/: circular_buffer.h  float16.h  hash.h  producer_consumer.h  static_utils.h  string_utils.cpp  string_utils.h  timestamp.cpp  timestamp.h  vector.h  workers.h
test/: 32bit.toolchain.cmake  CMakeLists.txt  main_test.cpp  platform_mocks.cpp  test_pulse_processor.cpp
